# music_cli

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
src/music_cli/: __main__.py  catalog.py  cli.py  client.py  config.py  db.py  device.py  server.py  sync.py  syncq.py  tui.py
tests/: conftest.py
tests/contract/: README.md  test_consumer_pact.py  test_provider_verify.py
tests/e2e/: README.md  conftest.py  test_serve_sync.py
tests/integration/: conftest.py  test_catalog_build.py  test_cli_catalog.py  test_device_remove.py  test_server.py  test_sync.py  test_tui_app.py  test_tui_downloader.py
tests/unit/: conftest.py  test_catalog_parse.py  test_config.py  test_package.py  test_safe_paths.py  test_syncq.py  test_tui_helpers.py
